# python-yandex-contest-tools

./: .editorconfig  .gitignore  CONTRIBUTING.MD  LICENSE  README-RU.md  README.md  config.toml  pyproject.toml  requirements.txt  sample_config.toml
.github/workflows/: codeql-analysis.yml  lint.yml
src/: config.py  export.py  info_strings.py  main.py  requirements.txt  students.py  submission_validation.py  task.py
