[tool.poetry]
name = "python-yandex-contest-tools"
version = "0.1.0"
description = "A results generator and automatic token checker for Yandex Contest"
authors = ["Nikolay Chechulin <nchechulin@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.10"
pydantic = "^1.9.1"
termcolor = "^2.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
